--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="nameApp">
   <head>
+    <base href="/ " />
     <title>Todo Angular</title>
     <link href="content/css/styles.css" rel="stylesheet" type="text/css" />
     <script src="./app/lib/angular.min.js"></script>
     <script src="./app/lib/angular-route.min.js"></script>
+    <script src="./app/lib/angular-animate.min.js"></script>
     <script src="./app/app.js"></script>
   </head>
   <body>
