--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <div id="menu-bar">
   <h1>Practice</h1>
   <ul>
-    <li><a href="/home">Home</a></li>
-    <li><a href="/list">Todo</a></li>
+    <li><a href="#!/home">Home</a></li>
+    <li><a href="#!/list">Todo</a></li>
   </ul>
 </div>
